--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "next": "15.5.4",
     "react": "19.1.0",
