--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-spinners": "^0.17.0",
+    "swiper": "^12.0.3",
     "validator": "^13.15.15"
   },
   "devDependencies": {
